Move to retention rules snapshot as source of truth for accessing run rules